// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<withMaterialTheme(CoreCheckbox) /> 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "alignItems": "center",
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.54)",
          "fontSize": 24,
        },
        Array [
          undefined,
          undefined,
        ],
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`<withMaterialTheme(CoreCheckbox) accent checked /> 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "alignItems": "center",
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#FF4081",
          "fontSize": 24,
        },
        Array [
          undefined,
          undefined,
        ],
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`<withMaterialTheme(CoreCheckbox) checked /> 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "alignItems": "center",
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#3F51B5",
          "fontSize": 24,
        },
        Array [
          undefined,
          undefined,
        ],
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`<withMaterialTheme(CoreCheckbox) checked disabled /> 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "alignItems": "center",
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.38)",
          "fontSize": 24,
        },
        Array [
          undefined,
          undefined,
        ],
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`<withMaterialTheme(CoreCheckbox) checked indeterminate /> 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "alignItems": "center",
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#3F51B5",
          "fontSize": 24,
        },
        Array [
          undefined,
          undefined,
        ],
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`<withMaterialTheme(CoreCheckbox) checked normalColor="#123456" /> 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "alignItems": "center",
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#3F51B5",
          "fontSize": 24,
        },
        Array [
          undefined,
          undefined,
        ],
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`<withMaterialTheme(CoreCheckbox) checked tintColor="#123456" /> 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "alignItems": "center",
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#123456",
          "fontSize": 24,
        },
        Array [
          undefined,
          undefined,
        ],
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`<withMaterialTheme(CoreCheckbox) colorized /> 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "alignItems": "center",
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#3F51B5",
          "fontSize": 24,
        },
        Array [
          undefined,
          undefined,
        ],
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`<withMaterialTheme(CoreCheckbox) disabled /> 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "alignItems": "center",
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.38)",
          "fontSize": 24,
        },
        Array [
          undefined,
          undefined,
        ],
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`<withMaterialTheme(CoreCheckbox) disabled disabledColor="#123456" /> 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "alignItems": "center",
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#123456",
          "fontSize": 24,
        },
        Array [
          undefined,
          undefined,
        ],
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`<withMaterialTheme(CoreCheckbox) disabled indeterminate /> 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "alignItems": "center",
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.38)",
          "fontSize": 24,
        },
        Array [
          undefined,
          undefined,
        ],
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`<withMaterialTheme(CoreCheckbox) indeterminate /> 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "alignItems": "center",
        "height": 24,
        "justifyContent": "center",
        "width": 24,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#3F51B5",
          "fontSize": 24,
        },
        Array [
          undefined,
          undefined,
        ],
        Object {
          "fontFamily": "Material Icons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
      ]
    }
  >
    
  </Text>
</View>
`;
